Removed the word menu form mobile nav, plus fixed z-index for modal.

--- a/_sass/_enquire-now.scss
+++ b/_sass/_enquire-now.scss
@@ -4,7 +4,7 @@
   position: absolute;
   right: -56px;
   top: 200px;
-  z-index: 2000;
+  z-index: 1000;
   background-color: #fff;
   -webkit-transform: rotate(-90deg);
   -ms-transform: rotate(-90deg);
